--- a/eureka-dept-client.yml
+++ b/eureka-dept-client.yml
@@ -8,23 +8,22 @@ server:
 spring: 
    profiles: dev
    application: 
-    name: microservicecloud-config-dept-client
+    name: provider-dept
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: org.gjt.mm.mysql.Driver
     url: jdbc:mysql://localhost:3306/cloudDB01
     username: root
-    password: 123456
+    password: root
     dbcp2:
       min-idle: 5
       initial-size: 5
       max-total: 5
       max-wait-millis: 200 
 mybatis:
-  config-location: classpath:mybatis/mybatis.cfg.xml
-  type-aliases-package: com.atguigu.springcloud.entities
-  mapper-locations:
-  - classpath:mybatis/mapper/**/*.xml
+  config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
+  type-aliases-package: com.sxw.springcloudlearn.domin;   # 所有domo别名类所在包
+  mapper-locations: classpath:mybatis/mapper/*.xml       
  
 eureka: 
   client: #客户端注册进eureka服务列表内
@@ -45,13 +44,13 @@ server:
 spring: 
    profiles: test
    application: 
-    name: microservicecloud-config-dept-client
+    name: provider-dept
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: org.gjt.mm.mysql.Driver
     url: jdbc:mysql://localhost:3306/cloudDB02
     username: root
-    password: 123456
+    password: root
     dbcp2:
       min-idle: 5
       initial-size: 5
@@ -60,10 +59,9 @@ spring:
   
   
 mybatis:
-  config-location: classpath:mybatis/mybatis.cfg.xml
-  type-aliases-package: com.atguigu.springcloud.entities
-  mapper-locations:
-  - classpath:mybatis/mapper/**/*.xml
+  config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
+  type-aliases-package: com.sxw.springcloudlearn.domin;   # 所有domo别名类所在包
+  mapper-locations: classpath:mybatis/mapper/*.xml    
  
 eureka: 
   client: #客户端注册进eureka服务列表内
